# qhat

./: .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  pyproject.toml  time_evolution.py  xxz_cs2cocl4_10.json
.github/workflows/: python-app.yml
common/: LCPSHamiltonian.py  MixedFermionBosonOperator.py  QPE_Kitaev.py  README.md  Untitled.ipynb  __init__.py  bosons_binary.py  dense_pauli_exp.py  dps_test.py  trotter.py  trotter_test.py
fourth_order/: FOURTH_ORDER_SUZUKI_FINAL.md  FOURTH_ORDER_SYMMETRIC_CORRECTED.md  fourth_order_symmetric.py
hamiltonian_generator/: README.md  build_config.py  config.py  eigendecompose.py  eigenparse.py  hamgen.py  hamgen_types.py  pauli_test.py
qre/: APPLY_FIX.md  CONVERGENCE_IMPLEMENTATION_SUMMARY.md  CONVERGENCE_MONITORING.md  CRITICAL_FINDING.md  EQUATION_VERIFICATION.md  EXACT_COMPUTATION_FEATURE.md  FILE_REORGANIZATION.md  FINAL_SUMMARY.md  FOURTH_ORDER_DERIVATION_COMPLETE.md  FOURTH_ORDER_FORMULA.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_README.md  PAPER_VERIFICATION_FINDINGS.md  PERFORMANCE_SUMMARY.md  README.md  RECOMMENDED_FIXES.md  SWITCHED_TO_FAST_VERSION.md  USAGE_VERIFICATION_NEEDED.md  VERIFICATION_OF_USER_FIX.md  analyze_exact_computation.py  analyze_usage.py  benchmark_commutators.py  config.py  example_comparison.py  extract_equation_details.py  extract_equations_from_paper.py  extract_page_37.py  fourth_order_analysis.py  jkg_utils.py  jkg_utils_fast.py  qre_analysis.py  qre_circuit.py  qre_configuration.py  qre_driver.py  qre_hamiltonian.py  qre_types.py  qre_unitary.py  quick_benchmark.py  test_convergence_monitoring.py  test_correctness.py  (+10 more)
qre/examples/: Be-H_1.30_sto-6g_as-003-003.tensors.npz
